<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/data_layer_message_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/data_layer_message_title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/data_layer_message_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/light_grey"
            android:hint="@string/chat_message_hint"
            android:lines="5"
            android:padding="5dp" />

        <Button
            android:id="@+id/data_layer_message_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/chat_message_send_label" />
    </LinearLayout>
</ScrollView>