<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:orientation="vertical">

    <TextView
        android:id="@+id/session_info_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="center"
        android:minWidth="@dimen/location_field_min_width"
        android:padding="3dp"
        android:text="@string/session_info_header_label"
        android:textColor="@color/white"
        android:textSize="@dimen/location_text_size"
        android:textStyle="bold" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/session_info_owner_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/location_field_min_width"
            android:text="@string/session_info_owner_label"
            android:textColor="@color/white"
            android:textSize="@dimen/location_text_size" />

        <TextView
            android:id="@+id/session_info_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_info"
            android:textColor="@color/white"
            android:textSize="@dimen/location_text_size" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/session_info_start_date_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/location_field_min_width"
            android:text="@string/session_info_start_date_label"
            android:textColor="@color/white"
            android:textSize="@dimen/location_text_size" />

        <TextView
            android:id="@+id/session_info_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_info"
            android:textColor="@color/white"
            android:textSize="@dimen/location_text_size" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/session_info_end_date_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/location_field_min_width"
            android:text="@string/session_info_end_date_label"
            android:textColor="@color/white"
            android:textSize="@dimen/location_text_size" />

        <TextView
            android:id="@+id/session_info_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_info"
            android:textColor="@color/white"
            android:textSize="@dimen/location_text_size" />
    </TableRow>

</TableLayout>
